[package]
name = "fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.util]
path = "../crates/util"

[[bin]]
name = "compare_paths_fuzz"
path = "fuzz_targets/compare_paths_fuzz.rs"
test = false
doc = false
bench = false
