[package]
authors = ["Nathan Sobo <nathansobo@gmail.com>"]
edition = "2018"
name = "gpui"
version = "0.1.0"

[dependencies]
async-task = {git = "https://github.com/zedit-io/async-task", rev = "341b57d6de98cdfd7b418567b8de2022ca993a6e"}
ctor = "0.1"
num_cpus = "1.13"
pathfinder_color = "0.5"
pathfinder_geometry = "0.5"
smol = "1.2"
tree-sitter = "0.17"

[build-dependencies]
bindgen = "0.57"
cc = "1.0.67"

[target.'cfg(target_os = "macos")'.dependencies]
anyhow = "1"
cocoa = "0.24"
core-foundation = "0.9"
core-text = "19.2"
foreign-types = "0.5"
log = "0.4"
metal = "0.21"
objc = "0.2"
