[package]
authors = ["Nathan Sobo <nathansobo@gmail.com>"]
edition = "2018"
name = "gpui"
version = "0.1.0"

[dependencies]
async-std = {version = "1.9.0", features = ["unstable"]}
async-task = "4.0.3"
ctor = "0.1"
etagere = "0.2"
log = "0.4"
num_cpus = "1.13"
ordered-float = "2.1.1"
parking_lot = "0.11.1"
pathfinder_color = "0.5"
pathfinder_geometry = "0.5"
rand = "0.8.3"
replace_with = "0.1.7"
resvg = "0.14"
scoped-pool = "1.0.0"
serde = "1.0.125"
serde_json = "1.0.64"
smallvec = "1.6.1"
smol = "1.2"
tiny-skia = "0.5"
tree-sitter = "0.17"
usvg = "0.14"

[build-dependencies]
bindgen = "0.57"
cc = "1.0.67"

[dev-dependencies]
png = "0.16"
simplelog = "0.9"

[target.'cfg(target_os = "macos")'.dependencies]
anyhow = "1"
cocoa = "0.24"
core-foundation = "0.9"
core-graphics = "0.22.2"
core-text = "19.2"
font-kit = {git = "https://github.com/zed-industries/font-kit", rev = "8eaf7a918eafa28b0a37dc759e2e0e7683fa24f1"}
foreign-types = "0.3"
log = "0.4"
metal = "0.21.0"
objc = "0.2"
