[package]
name = "zed-rpc"
description = "Shared logic for communication between the Zed app and the zed.dev server"
edition = "2018"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
async-lock = "2.4"
base64 = "0.13"
futures = "0.3"
log = "0.4"
postage = { version="0.4.1", features=["futures-traits"] }
prost = "0.7"
rsa = "0.4"
rand = "0.8"
serde = { version="1", features=["derive"] }

[build-dependencies]
prost-build = { git="https://github.com/sfackler/prost", rev="082f3e65874fe91382e72482863896b7b4db3728" }

[dev-dependencies]
smol = "1.2.5"
