[package]
authors = ["Nathan Sobo <nathansobo@gmail.com>"]
edition = "2018"
name = "zed"
version = "0.1.0"

[lib]
name = "zed"
path = "src/lib.rs"

[[bin]]
name = "Zed"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.38"
arrayvec = "0.5.2"
crossbeam-channel = "0.5.0"
ctor = "0.1.20"
dirs = "3.0"
easy-parallel = "3.1.0"
fsevent = {path = "../fsevent"}
futures-core = "0.3"
gpui = {path = "../gpui"}
ignore = {git = "https://github.com/zed-industries/ripgrep", rev = "1d152118f35b3e3590216709b86277062d79b8a0"}
lazy_static = "1.4.0"
libc = "0.2"
log = "0.4"
num_cpus = "1.13.0"
parking_lot = "0.11.1"
postage = {version = "0.4.1", features = ["futures-traits"]}
rand = "0.8.3"
rust-embed = "5.9.0"
seahash = "4.1"
serde = {version = "1", features = ["derive"]}
simplelog = "0.9"
smallvec = "1.6.1"
smol = "1.2.5"

[dev-dependencies]
env_logger = "0.8"
serde_json = {version = "1.0.64", features = ["preserve_order"]}
tempdir = "0.3.7"
unindent = "0.1.7"
